--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,4 +1,4 @@
-Name: neo4j
+Name: neo4jTest
 Cartridge-Short-Name: NEO4J
 Display-Name: NEO4J
 Description: "Neo4j is an open-source, high-performance, enterprise-grade NOSQL graph database."
